Commit dos diretorios mais organizados
Abrir o index.html primeiro

--- a/HackFools/index.html
+++ b/HackFools/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="menu">
         <div class="m1">
-            <img src="EleganteCerto.png">
+            <img src="Imagens/EleganteCerto.png">
         </div>
         <div class="m2">
             <ul>
@@ -28,12 +28,12 @@
     <div class="header">
         <div class="title">
             <h1>
-                <img src="EleganteBranco.png">
+                <img src="Imagens/EleganteBranco.png">
             </h1>
             <h2>
                 Conquiste seu amor ou destrua seu inimigo pelo estômago!
             </h2>
-            <img src="pizzaind.png">
+            <img src="Imagens/pizzaind.png">
         </div>
         <a href="#nav">
         <div id="nav" class="nav">
@@ -58,12 +58,12 @@ Em nosso site, você pode customizar sua pizza do seu jeito (na verdade só com 
             </div>
         </div>
         <div class="c2 l">
-            <img src="fachada.jpg">
+            <img src="Imagens/fachada.jpg">
         </div>
     </div>
     <div class="content-strip calt">
         <div class="c2 r">
-            <img src="entregador.jpg">
+            <img src="Imagens/entregador.jpg">
         </div>
         <div class="c1">
             <div >
@@ -96,7 +96,7 @@ Em nosso site, você pode customizar sua pizza do seu jeito (na verdade só com 
             </div>
         </div>
         <div class="c2 l">
-            <img src="Ketchup.png">
+            <img src="Imagens/Ketchup.png">
         </div>
     </div>
     <div class="content-strip calt">
