--- a/HackFools/ProjPizza.html
+++ b/HackFools/ProjPizza.html
@@ -10,7 +10,7 @@
   <body>
     <div class="menu">
       <div class="m1">
-        <img src="EleganteCerto.png">
+        <img src="Imagens/EleganteCerto.png">
       </div>
       <div class="m2">
           <ul>
@@ -111,20 +111,20 @@
       <div class="caixaPizza fora" id="caixap">
         <div class="boda">
         <h1 id="txtp"></h1>
-          <img src="EleganteCerto.png">
+          <img src="Imagens/EleganteCerto.png">
         </div>
       </div>
 
-      <img class="topping" src="Pizza.png">
-      <img class="topping some" id="t1" src="Pneu.png">
-      <img class="topping some" id="t2" src="Sexo.png">
-      <img class="topping some" id="t3" src="S2.png">
-      <img class="topping some" id="t4" src="Pelvis.png">
-      <img class="topping some" id="t5" src="IME.png">
-      <img class="topping some" id="t6" src="RomaseJulia.png">
-      <img class="topping some" id="t7" src="Folha.png">
-      <img class="topping some" id="t8" src="rickroll-roll.gif">
-      <img class="topping some" id="t9" src="Rato.png">
+      <img class="topping" src="Imagens/Pizza.png">
+      <img class="topping some" id="t1" src="Imagens/Pneu.png">
+      <img class="topping some" id="t2" src="Imagens/Sexo.png">
+      <img class="topping some" id="t3" src="Imagens/S2.png">
+      <img class="topping some" id="t4" src="Imagens/Pelvis.png">
+      <img class="topping some" id="t5" src="Imagens/IME.png">
+      <img class="topping some" id="t6" src="Imagens/RomaseJulia.png">
+      <img class="topping some" id="t7" src="Imagens/Folha.png">
+      <img class="topping some" id="t8" src="Imagens/rickroll-roll.gif">
+      <img class="topping some" id="t9" src="Imagens/Rato.png">
 
       <div class="pizza" id="pizza">
         <canvas id="canvas">
